--- a/book-frontend/src/index.css
+++ b/book-frontend/src/index.css
@@ -20,6 +20,10 @@ a:hover{
   text-decoration: underline;
 }
 
+select {
+  text-align: center;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
